fixed flicker issues and nav hover color for light mode

--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@ html {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  margin-bottom: var(--hero_section_bottom_margin);
+  padding-bottom: var(--hero_section_bottom_margin);
 }
 
 .hero__subtitle {
@@ -84,12 +84,11 @@ html {
 .hero_text_img_div {
   display: flex;
   gap: 20%;
-  margin-top: 100px;
   justify-content: center;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 8rem;
+  padding-top: 14.25rem;
   max-width: 1300px;
 }
 .top_text {
