--- a/src/components/featuresComponent.css
+++ b/src/components/featuresComponent.css
@@ -1,13 +1,15 @@
 .container__features {
   padding: 20px;
   color: var(--text_color);
+  background-color: var(--background_color);
   display: flex;
   flex-direction: column;
   font-size: 26px;
   font-family: "openSans";
   padding-bottom: 100px;
   position: relative;
-  transition: color var(--transition-duration);
+  transition: background-color var(--transition-duration),
+    color var(--transition-duration);
 }
 
 .purple__ball--features {
