--- a/src/components/statsComponent.css
+++ b/src/components/statsComponent.css
@@ -1,9 +1,11 @@
 .container {
   background-color: var(--background_color);
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
   color: var(--text_color);
   text-align: center;
-  margin-bottom: var(--stats_container_bottom_margin);
+  padding-bottom: var(--stats_container_bottom_margin);
   transition: background-color var(--transition-duration),
     color var(--transition-duration), margin-bottom var(--transition-duration);
 }
