--- a/src/components/worksComponent.css
+++ b/src/components/worksComponent.css
@@ -3,8 +3,8 @@
   padding: 20px;
   color: var(--text_color);
   text-align: center;
-  margin-bottom: 20px;
-  padding-bottom: 50px;
+
+  padding-bottom: 70px;
   transition: background-color var(--transition-duration),
     color var(--transition-duration);
 }
